--- a/app/templates/src/index.jade
+++ b/app/templates/src/index.jade
@@ -1,12 +1,11 @@
 doctype html
-html(manifest='manifest.txt')
-	meta(charset='utf-8')
-	meta(http-equiv='X-UA-Compatible', content='IE=edge')
-	title Home - <%= appname %>
-	meta(name='viewport', content='width=device-width', initial-scale='1')
-	link(rel='stylesheet', href='index.min.css')
-	.hidden
-		//- inject:svg
-		//- endinject
-	#app
-	script(src='index.min.js')
+html(manifest=config.manifest)
+	head
+		meta(charset='utf-8')
+		meta(http-equiv='X-UA-Compatible', content='IE=edge')
+		title Home - #{config.appname}
+		meta(name='viewport', content='width=device-width', initial-scale='1')
+		link(rel='stylesheet', href=config.css.dist)
+	body
+		h1 Hello!
+		script(src=config.js.dist)
